modify user api error, add momentFollowedList api
